--- a/scripts/Galaxy Tracker.ipynb
+++ b/scripts/Galaxy Tracker.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "    ax.set_yticks([0, 1, 2, 3, 4, 5])\n",
     "\n",
     "    paths = Paths(galaxy, rerun, resolution)\n",
-    "    df = pd.read_csv(f\"{paths.results}temporal_data.csv\")\n",
+    "    df = pd.read_csv(f\"../{paths.results}temporal_data.csv\")\n",
     "    ax.plot(df[\"Time_Gyr\"], df[\"MainHaloIdx\"],\n",
     "            c='tab:red', lw=1.0, label='Halo', zorder=10)\n",
     "    ax.plot(df[\"Time_Gyr\"], df[\"MainSubhaloIdx\"],\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
     "    galaxy = ax_idx + 1\n",
     "\n",
     "    paths = Paths(galaxy, False, 4)\n",
-    "    df = pd.read_csv(f\"{paths.results}temporal_data.csv\")\n",
+    "    df = pd.read_csv(f\"../{paths.results}temporal_data.csv\")\n",
     "    ax.plot(df[\"Time_Gyr\"], df[\"MainHaloIdx\"],\n",
     "            c='tab:red', lw=1.0, label='Halo', zorder=10)\n",
     "    ax.plot(df[\"Time_Gyr\"], df[\"MainSubhaloIdx\"],\n",
@@ -153,8 +153,8 @@
     "    if ax.get_subplotspec().is_last_row():\n",
     "        ax.set_xlabel('Time [Gyr]')\n",
     "\n",
-    "for extension in [\".pdf\", \".png\"]:\n",
-    "    fig.savefig(f\"images/level4/galaxy_tracker.{extension}\")\n",
+    "# for extension in [\".pdf\", \".png\"]:\n",
+    "#     fig.savefig(f\"../images/level4/galaxy_tracker.{extension}\")\n",
     "\n",
     "plt.show()"
    ]
