--- a/scripts/Circularity.ipynb
+++ b/scripts/Circularity.ipynb
@@ -20,7 +20,7 @@
     "from auriga.images import add_redshift, figure_setup\n",
     "from auriga.paths import Paths\n",
     "from auriga.parser import parse\n",
-    "from auriga.snapshot_v2 import Snapshot"
+    "from auriga.snapshot import Snapshot"
    ]
   },
   {
