Add TODOs an improve formatting.

--- a/scripts/Circularity.ipynb
+++ b/scripts/Circularity.ipynb
@@ -68,6 +68,8 @@
     "def plot_circ_dist_for_galaxies(simulations: list,\n",
     "                                n_bins: int = 150,\n",
     "                                circ_range: tuple = (-2.0, 2.0)):\n",
+    "    # FIXME: Add documentation.\n",
+    "\n",
     "    fig = plt.figure(figsize=(2.0, 2.0))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
     "    ax = gs.subplots(sharex=True, sharey=True)\n",
