--- a/scripts/Galaxy Tracker.ipynb
+++ b/scripts/Galaxy Tracker.ipynb
@@ -37,6 +37,8 @@
    "outputs": [],
    "source": [
     "def plot_tracker_for_galaxy(simulation: str):\n",
+    "    # FIXME: Add documentation.\n",
+    "\n",
     "    galaxy, rerun, resolution = parse(simulation=simulation)\n",
     "\n",
     "    fig = plt.figure(figsize=(2.0, 2.0))\n",
