--- a/scripts/Subhalo Velocity.ipynb
+++ b/scripts/Subhalo Velocity.ipynb
@@ -38,6 +38,7 @@
    "outputs": [],
    "source": [
     "def read_data(simulation: str):\n",
+    "    # FIXME: Add documentation.\n",
     "    galaxy, rerun, resolution = parse(simulation=simulation)\n",
     "    paths = Paths(galaxy, rerun, resolution)\n",
     "    sh_vel = np.loadtxt(f\"../{paths.results}subhalo_vels.csv\")\n",
@@ -57,6 +58,7 @@
    "outputs": [],
    "source": [
     "def plot_tracker_for_galaxies(simulations: list):\n",
+    "    # FIXME: Add documentation.\n",
     "    fig = plt.figure(figsize=(2.0, 2.0))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
     "    ax = gs.subplots(sharex=True, sharey=True)\n",
