--- a/scripts/Virial Properties.ipynb
+++ b/scripts/Virial Properties.ipynb
@@ -37,6 +37,7 @@
    "outputs": [],
    "source": [
     "def plot_virial_props_for_galaxy(simulation: str):\n",
+    "    # FIXME: Add documentation.\n",
     "    galaxy, rerun, resolution = parse(simulation=simulation)\n",
     "\n",
     "    fig = plt.figure(figsize=(2.0, 4.0))\n",
