--- a/scripts/Reference Potential.ipynb
+++ b/scripts/Reference Potential.ipynb
@@ -38,6 +38,7 @@
    "outputs": [],
    "source": [
     "def plot_ref_pot_for_galaxies(simulations: list):\n",
+    "    # FIXME: Add documentation.\n",
     "\n",
     "    fig = plt.figure(figsize=(2.0, 2.0))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
