--- a/scripts/Stellar Origin.ipynb
+++ b/scripts/Stellar Origin.ipynb
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "def create_in_situ_plot_for_galaxy(simulation: str):\n",
-    "    stellar_origin_idx, region_tag = read_data(simulation=\"au6_or_l4_s127\")\n",
+    "    stellar_origin_idx, region_tag = read_data(simulation=simulation)\n",
     "    bar_widths, num_labels, labels, colors = prepare_data(\n",
     "        stellar_origin_idx=stellar_origin_idx,\n",
     "        region_tag=region_tag)\n",
