--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -188,7 +188,7 @@
     "            ax.axis(\"off\")\n",
     "\n",
     "    for ext in [\"pdf\", \"png\"]:\n",
-    "        fig.savefig(f\"../images/{filename}.{ext}\")\n",
+    "        fig.savefig(f\"../images/age_metallicity/{filename}.{ext}\")\n",
     "    plt.close(fig)"
    ]
   },
@@ -203,9 +203,9 @@
     "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
     "reruns = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
     "plot_age_metal_rel_for_sample(simulations=originals,\n",
-    "                              filename=\"age_metallicity_originals\")\n",
+    "                              filename=\"originals\")\n",
     "plot_age_metal_rel_for_sample(simulations=reruns,\n",
-    "                              filename=\"age_metallicity_reruns\")"
+    "                              filename=\"reruns\")"
    ]
   },
   {
