--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -165,8 +165,10 @@
     "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    simulation : str\n",
-    "        The simulation to plot.\n",
+    "    simulations : str\n",
+    "        A list of simulations to plot.\n",
+    "    filename : str\n",
+    "        The name of the output file.\n",
     "    \"\"\"\n",
     "\n",
     "    n_simulations = len(simulations)\n",
