--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -201,9 +201,9 @@
     "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
     "reruns = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
     "plot_age_metal_rel_for_sample(simulations=originals,\n",
-    "                              filename=\"originals\")\n",
+    "                              filename=\"originals_s127\")\n",
     "plot_age_metal_rel_for_sample(simulations=reruns,\n",
-    "                              filename=\"reruns\")"
+    "                              filename=\"reruns_s251\")"
    ]
   },
   {
