Remove labels in axis.

--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -161,7 +161,7 @@
     "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    simulations : str\n",
+    "    simulations : list\n",
     "        A list of simulations to plot.\n",
     "    filename : str\n",
     "        The name of the output file.\n",
@@ -176,7 +176,7 @@
     "    set_axs_configuration(\n",
     "        xlim=(0, 14), ylim=(-4, 3),\n",
     "        xticks=[2, 4, 6, 8, 10, 12], yticks=[-3, -2, -1, 0, 1, 2],\n",
-    "        xlabel=\"Age [Gyr]\", ylabel=\"[Fe/H] [dex]\",\n",
+    "        xlabel=\"Age [Gyr]\", ylabel=\"[Fe/H]\",\n",
     "        axs=axs, n_used=n_simulations)\n",
     "\n",
     "    for idx, ax in enumerate(axs.flat):\n",
@@ -242,7 +242,7 @@
     "        ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
     "        ax.set_yticks([-3, -2, -1, 0, 1, 2])\n",
     "        ax.set_xlabel(\"Age [Gyr]\")\n",
-    "        ax.set_ylabel(\"[Fe/H] [dex]\")\n",
+    "        ax.set_ylabel(\"[Fe/H]\")\n",
     "        ax.label_outer()\n",
     "\n",
     "    age, metal_ab, region_tag = read_data_with_region(simulation=simulation)\n",
