--- a/scripts/FeH Metallicity.ipynb
+++ b/scripts/FeH Metallicity.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,118 +42,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_data(simulation: str) -> dict:\n",
+    "def read_data(simulations: list) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Return a dictionary with the (nan)median values of the [Fe/H]\n",
-    "    abundance ratio for the stars in each component.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    simulation : str\n",
-    "        The simulation to consider.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    dict\n",
-    "        A dictionary with the results.\n",
-    "    \"\"\"\n",
-    "    settings = Settings()\n",
-    "\n",
-    "    s = Snapshot(simulation=simulation,\n",
-    "                 loadonlytype=[0, 1, 2, 3, 4, 5])\n",
-    "    s.add_circularity()\n",
-    "    s.add_reference_to_potential()\n",
-    "    s.add_normalized_potential()\n",
-    "    s.tag_particles_by_region(disc_std_circ=1.0,\n",
-    "                              disc_min_circ=0.4,\n",
-    "                              cold_disc_delta_circ=0.25,\n",
-    "                              bulge_max_specific_energy=-0.75)\n",
-    "    s.add_metal_abundance(of=\"Fe\", to=\"H\")\n",
-    "\n",
-    "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
-    "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
-    "\n",
-    "    results = {}\n",
-    "\n",
-    "    for idx, region in enumerate(settings.components):\n",
-    "        is_region = s.region_tag == idx\n",
-    "        results[region] = np.nanmedian(\n",
-    "            s.metal_abundance[\"Fe/H\"][is_real_star \\\n",
-    "                & is_main_obj & is_region]\n",
-    "        )\n",
-    "    results[\"All\"] = np.nanmedian(\n",
-    "            s.metal_abundance[\"Fe/H\"][is_real_star \\\n",
-    "                & is_main_obj])\n",
-    "\n",
-    "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def accumulate_sample(simulations: list) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Return a Pandas data frame with the (nan)median metallicity\n",
-    "    for the components for each galaxy.\n",
+    "    Return a Pandas data frame with abundance values for each galaxy\n",
+    "    and each component.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
     "    simulations : list\n",
-    "        _description_\n",
+    "        A list with all the simulations.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
     "    pd.DataFrame\n",
-    "        _description_\n",
+    "        A data frame with the results.\n",
     "    \"\"\"\n",
-    "    galaxy = []\n",
-    "    data_all = []\n",
-    "    data_halo = []\n",
-    "    data_bulge = []\n",
-    "    data_cdisc = []\n",
-    "    data_wdisc = []\n",
-    "    for simulation in simulations:\n",
-    "        galaxy.append(simulation)\n",
-    "        results = read_data(simulation=simulation)\n",
-    "        data_all.append(results[\"All\"])\n",
-    "        data_halo.append(results[\"H\"])\n",
-    "        data_bulge.append(results[\"B\"])\n",
-    "        data_cdisc.append(results[\"CD\"])\n",
-    "        data_wdisc.append(results[\"WD\"])\n",
+    "    settings = Settings()\n",
+    "    df = pd.DataFrame(\n",
+    "        index=list(range(30 * 5)),\n",
+    "        columns=[\"Simulation\",\n",
+    "                 \"Fe/H_Median\", \"Fe/H_Perc16\", \"Fe/H_Perc84\",\n",
+    "                 \"O/H_Median\", \"O/H_Perc16\", \"O/H_Perc84\",\n",
+    "                 \"O/Fe_Median\", \"O/Fe_Perc16\", \"O/Fe_Perc84\",\n",
+    "                 \"Component\"])\n",
     "\n",
-    "    df = pd.DataFrame()\n",
-    "    df[\"Simulation\"] = galaxy\n",
-    "    df[\"Metallicity_All\"] = data_all\n",
-    "    df[\"Metallicity_H\"] = data_halo\n",
-    "    df[\"Metallicity_B\"] = data_bulge\n",
-    "    df[\"Metallicity_CD\"] = data_cdisc\n",
-    "    df[\"Metallicity_WD\"] = data_wdisc\n",
+    "    k = 0\n",
+    "    for i, simulation in enumerate(simulations):\n",
+    "        s = Snapshot(simulation=simulation,\n",
+    "                     loadonlytype=[0, 1, 2, 3, 4, 5])\n",
+    "        s.add_circularity()\n",
+    "        s.add_reference_to_potential()\n",
+    "        s.add_normalized_potential()\n",
+    "        s.tag_particles_by_region(disc_std_circ=1.0,\n",
+    "                                  disc_min_circ=0.4,\n",
+    "                                  cold_disc_delta_circ=0.25,\n",
+    "                                  bulge_max_specific_energy=-0.75)\n",
+    "        s.add_metal_abundance(of=\"Fe\", to=\"H\")\n",
+    "        s.add_metal_abundance(of=\"O\", to=\"H\")\n",
+    "        s.add_metal_abundance(of=\"O\", to=\"Fe\")\n",
     "\n",
-    "    return df\n",
-    "    "
+    "        is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
+    "        is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
+    "\n",
+    "        for j, component in enumerate(settings.components + [\"All\"]):\n",
+    "            if component == \"All\":\n",
+    "                is_region = np.ones(s.region_tag.shape, dtype=bool)\n",
+    "            else:\n",
+    "                is_region = s.region_tag == j\n",
+    "            df.iloc[k, 0] = simulation\n",
+    "            df.iloc[k, 1] = np.nanmedian(\n",
+    "                s.metal_abundance[\"Fe/H\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region])\n",
+    "            df.iloc[k, 2] = np.nanpercentile(\n",
+    "                s.metal_abundance[\"Fe/H\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region], 16)\n",
+    "            df.iloc[k, 3] = np.nanpercentile(\n",
+    "                s.metal_abundance[\"Fe/H\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region], 84)\n",
+    "            df.iloc[k, 4] = np.nanmedian(\n",
+    "                s.metal_abundance[\"O/H\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region])\n",
+    "            df.iloc[k, 5] = np.nanpercentile(\n",
+    "                s.metal_abundance[\"O/H\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region], 16)\n",
+    "            df.iloc[k, 6] = np.nanpercentile(\n",
+    "                s.metal_abundance[\"O/H\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region], 84)\n",
+    "            df.iloc[k, 7] = np.nanmedian(\n",
+    "                s.metal_abundance[\"O/Fe\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region])\n",
+    "            df.iloc[k, 8] = np.nanpercentile(\n",
+    "                s.metal_abundance[\"O/Fe\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region], 16)\n",
+    "            df.iloc[k, 9] = np.nanpercentile(\n",
+    "                s.metal_abundance[\"O/Fe\"][is_real_star \\\n",
+    "                    & is_main_obj & is_region], 84)\n",
+    "            df.iloc[k, 10] = -1 if component == \"All\" else j\n",
+    "            k += 1\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
     "settings = Settings()\n",
     "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
-    "df = accumulate_sample(simulations=originals)"
+    "df = read_data(simulations=originals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## median([Fe/H]) Abundance Histogram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,25 +165,188 @@
     "ax.set_ylabel('PDF')\n",
     "ax.set_axisbelow(True)\n",
     "\n",
-    "ax.hist(df[\"Metallicity_All\"], bins=15, range=(-0.5, 0.5),\n",
+    "ax.hist(df[\"Fe/H_Median\"][df[\"Component\"] == -1], bins=15, range=(-0.5, 0.5),\n",
     "    histtype=\"stepfilled\", color=\"k\", alpha=0.25, lw=0, density=True,\n",
     "    label=\"All\")\n",
-    "ax.hist(df[\"Metallicity_H\"], bins=15, range=(-0.5, 0.5),\n",
+    "ax.hist(df[\"Fe/H_Median\"][df[\"Component\"] == 0], bins=15, range=(-0.5, 0.5),\n",
     "    histtype=\"step\", color=\"tab:blue\", alpha=1, density=True,\n",
     "    label=\"Halo\")\n",
-    "ax.hist(df[\"Metallicity_B\"], bins=15, range=(-0.5, 0.5),\n",
+    "ax.hist(df[\"Fe/H_Median\"][df[\"Component\"] == 1], bins=15, range=(-0.5, 0.5),\n",
     "    histtype=\"step\", color=\"tab:green\", alpha=1, density=True,\n",
     "    label=\"Bulge\")\n",
-    "ax.hist(df[\"Metallicity_CD\"], bins=15, range=(-0.5, 0.5),\n",
+    "ax.hist(df[\"Fe/H_Median\"][df[\"Component\"] == 2], bins=15, range=(-0.5, 0.5),\n",
     "    histtype=\"step\", color=\"tab:red\", alpha=1, density=True,\n",
     "    label=\"Cold Disc\")\n",
-    "ax.hist(df[\"Metallicity_WD\"], bins=15, range=(-0.5, 0.5),\n",
+    "ax.hist(df[\"Fe/H_Median\"][df[\"Component\"] == 3], bins=15, range=(-0.5, 0.5),\n",
     "    histtype=\"step\", color=\"tab:orange\", alpha=1, density=True,\n",
     "    label=\"Warm Disc\")\n",
     "\n",
     "ax.legend(loc=\"upper left\", framealpha=0, fontsize=5.0)\n",
     "\n",
     "fig.savefig(\"../images/metallicity/FeH_histogram_originals_s127.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## median([O/H]) vs median([Fe/H]) Scatter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(1.5, 4.0))\n",
+    "gs = fig.add_gridspec(nrows=5, ncols=1, hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "for ax in axs.flat:\n",
+    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_xlim(-1.0, 0.6)\n",
+    "    ax.set_ylim(-0.6, 0.8)\n",
+    "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
+    "    ax.set_yticks([-0.4, 0, 0.4])\n",
+    "    if ax == axs.flat[2]:\n",
+    "        ax.set_ylabel('median([O/H])')\n",
+    "    ax.set_xlabel('median([Fe/H])')\n",
+    "    ax.set_axisbelow(True)\n",
+    "\n",
+    "markers = [\"s\", \"o\", \"v\", \"^\", \"d\"]\n",
+    "colors = [\"k\"] + list(settings.component_colors.values())\n",
+    "labels = [\"All\"] + list(settings.component_labels.values())\n",
+    "for i, ax in enumerate(axs.flat):\n",
+    "    for j in range(-1, 4):\n",
+    "        label = labels[j + 1] if j + 1 == i else None\n",
+    "        color = colors[j + 1] if j + 1 == i else \"silver\"\n",
+    "        zorder = 10 if j + 1 == i else 5\n",
+    "        ax.scatter(\n",
+    "            df[\"Fe/H_Median\"][df[\"Component\"] == j],\n",
+    "            df[\"O/H_Median\"][df[\"Component\"] == j],\n",
+    "            c=color, label=label, zorder=zorder,\n",
+    "            s=10, linewidths=0.4, edgecolors=\"white\", marker=markers[j + 1])\n",
+    "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=5.0)\n",
+    "\n",
+    "fig.savefig(\"../images/metallicity/OH_vs_FeH_originals_s127.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## median([O/Fe]) vs median([Fe/H]) Scatter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(1.5, 4.0))\n",
+    "gs = fig.add_gridspec(nrows=5, ncols=1, hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "for ax in axs.flat:\n",
+    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_xlim(-1.0, 0.6)\n",
+    "    ax.set_ylim(0.2, 0.3)\n",
+    "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
+    "    ax.set_yticks([0.22, 0.24, 0.26, 0.28])\n",
+    "    if ax == axs.flat[2]:\n",
+    "        ax.set_ylabel('median([O/Fe])')\n",
+    "    ax.set_xlabel('median([Fe/H])')\n",
+    "    ax.set_axisbelow(True)\n",
+    "\n",
+    "markers = [\"s\", \"o\", \"v\", \"^\", \"d\"]\n",
+    "colors = [\"k\"] + list(settings.component_colors.values())\n",
+    "labels = [\"All\"] + list(settings.component_labels.values())\n",
+    "for i, ax in enumerate(axs.flat):\n",
+    "    for j in range(-1, 4):\n",
+    "        label = labels[j + 1] if j + 1 == i else None\n",
+    "        color = colors[j + 1] if j + 1 == i else \"silver\"\n",
+    "        zorder = 10 if j + 1 == i else 5\n",
+    "        ax.scatter(\n",
+    "            df[\"Fe/H_Median\"][df[\"Component\"] == j],\n",
+    "            df[\"O/Fe_Median\"][df[\"Component\"] == j],\n",
+    "            c=color, label=label, zorder=zorder,\n",
+    "            s=10, linewidths=0.4, edgecolors=\"white\", marker=markers[j + 1])\n",
+    "    ax.legend(loc=\"lower left\", framealpha=0, fontsize=5.0)\n",
+    "\n",
+    "fig.savefig(\"../images/metallicity/OFe_vs_FeH_originals_s127.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the error bars for the plot\n",
+    "xerr = np.abs(df[[\"Fe/H_Perc16\", \"Fe/H_Perc84\"]].to_numpy() \\\n",
+    "    - np.column_stack((df[\"Fe/H_Median\"].to_numpy(),\n",
+    "                    df[\"Fe/H_Median\"].to_numpy())))\n",
+    "yerr = np.abs(df[[\"O/Fe_Perc16\", \"O/Fe_Perc84\"]].to_numpy() \\\n",
+    "    - np.column_stack((df[\"O/Fe_Median\"].to_numpy(),\n",
+    "                    df[\"O/Fe_Median\"].to_numpy())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize=(1.5, 4.0))\n",
+    "gs = fig.add_gridspec(nrows=5, ncols=1, hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "for ax in axs.flat:\n",
+    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_xlim(-1.0, 0.6)\n",
+    "    ax.set_ylim(0.2, 0.3)\n",
+    "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
+    "    ax.set_yticks([0.22, 0.24, 0.26, 0.28])\n",
+    "    if ax == axs.flat[2]:\n",
+    "        ax.set_ylabel('median([O/Fe])')\n",
+    "    ax.set_xlabel('median([Fe/H])')\n",
+    "    ax.set_axisbelow(True)\n",
+    "\n",
+    "markers = [\"s\", \"o\", \"v\", \"^\", \"d\"]\n",
+    "colors = [\"k\"] + list(settings.component_colors.values())\n",
+    "labels = [\"All\"] + list(settings.component_labels.values())\n",
+    "for i, ax in enumerate(axs.flat):\n",
+    "    for j in range(-1, 4):\n",
+    "        label = labels[j + 1] if j + 1 == i else None\n",
+    "        color = colors[j + 1] if j + 1 == i else \"silver\"\n",
+    "        zorder = 10 if j + 1 == i else 5\n",
+    "        plot_xerr = xerr[df[\"Component\"] == j].T if j + 1 == i else None\n",
+    "        plot_yerr = yerr[df[\"Component\"] == j].T if j + 1 == i else None\n",
+    "        ax.errorbar(\n",
+    "            x=df[\"Fe/H_Median\"][df[\"Component\"] == j],\n",
+    "            y=df[\"O/Fe_Median\"][df[\"Component\"] == j],\n",
+    "            xerr=plot_xerr,\n",
+    "            yerr=plot_yerr,\n",
+    "            c=color, zorder=zorder, linestyle=\"none\",\n",
+    "            ms=3, elinewidth=0.25, marker=None, capsize=0)\n",
+    "        ax.scatter(\n",
+    "            df[\"Fe/H_Median\"][df[\"Component\"] == j],\n",
+    "            df[\"O/Fe_Median\"][df[\"Component\"] == j],\n",
+    "            c=color, label=label, zorder=zorder,\n",
+    "            s=10, linewidths=0.4, edgecolors=\"white\", marker=markers[j + 1])\n",
+    "    ax.legend(loc=\"lower left\", framealpha=0, fontsize=5.0)\n",
+    "\n",
+    "fig.savefig(\"../images/metallicity/OFe_vs_FeH_originals_s127_err.pdf\")\n",
     "plt.close(fig)"
    ]
   }
