--- a/scripts/FeH Metallicity.ipynb
+++ b/scripts/FeH Metallicity.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,13 +129,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "settings = Settings()\n",
     "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
     "df = read_data(simulations=originals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the error bars\n",
+    "xerr = np.abs(df[[\"Fe/H_Perc16\", \"Fe/H_Perc84\"]].to_numpy() \\\n",
+    "    - np.column_stack((df[\"Fe/H_Median\"].to_numpy(),\n",
+    "                    df[\"Fe/H_Median\"].to_numpy())))\n",
+    "yerr = np.abs(df[[\"O/Fe_Perc16\", \"O/Fe_Perc84\"]].to_numpy() \\\n",
+    "    - np.column_stack((df[\"O/Fe_Median\"].to_numpy(),\n",
+    "                    df[\"O/Fe_Median\"].to_numpy())))"
    ]
   },
   {
@@ -244,13 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(2.0, 5.0))\n",
-    "gs = fig.add_gridspec(nrows=5, ncols=1, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "fig, axs = plt.subplots(\n",
+    "    figsize=(7.4, 2.0), nrows=1, ncols=4, sharey=True, sharex=True,\n",
+    "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
     "\n",
     "for ax in axs.flat:\n",
     "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
@@ -259,24 +274,24 @@
     "    ax.set_ylim(0.2, 0.3)\n",
     "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
     "    ax.set_yticks([0.22, 0.24, 0.26, 0.28])\n",
-    "    if ax == axs.flat[2]:\n",
+    "    if ax == axs.flat[0]:\n",
     "        ax.set_ylabel('median([O/Fe])')\n",
     "    ax.set_xlabel('median([Fe/H])')\n",
     "    ax.set_axisbelow(True)\n",
     "\n",
-    "markers = [\"s\", \"o\", \"v\", \"^\", \"d\"]\n",
-    "colors = [\"k\"] + list(settings.component_colors.values())\n",
-    "labels = [\"All\"] + list(settings.component_labels.values())\n",
+    "markers = [\"o\", \"v\", \"^\", \"d\"]\n",
+    "colors = list(settings.component_colors.values())\n",
+    "labels = list(settings.component_labels.values())\n",
     "for i, ax in enumerate(axs.flat):\n",
-    "    for j in range(-1, 4):\n",
-    "        label = labels[j + 1] if j + 1 == i else None\n",
-    "        color = colors[j + 1] if j + 1 == i else \"silver\"\n",
-    "        zorder = 10 if j + 1 == i else 5\n",
+    "    for j in range(4):\n",
+    "        label = labels[j] if j == i else None\n",
+    "        color = colors[j] if j == i else \"silver\"\n",
+    "        zorder = 10 if j == i else 5\n",
     "        ax.scatter(\n",
     "            df[\"Fe/H_Median\"][df[\"Component\"] == j],\n",
     "            df[\"O/Fe_Median\"][df[\"Component\"] == j],\n",
     "            c=color, label=label, zorder=zorder,\n",
-    "            s=10, linewidths=0.4, edgecolors=\"white\", marker=markers[j + 1])\n",
+    "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
     "    ax.legend(loc=\"lower left\", framealpha=0, fontsize=5.0)\n",
     "\n",
     "fig.savefig(\"../images/metallicity/OFe_vs_FeH_originals_s127.pdf\")\n",
@@ -284,31 +299,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Calculate the error bars for the plot\n",
-    "xerr = np.abs(df[[\"Fe/H_Perc16\", \"Fe/H_Perc84\"]].to_numpy() \\\n",
-    "    - np.column_stack((df[\"Fe/H_Median\"].to_numpy(),\n",
-    "                    df[\"Fe/H_Median\"].to_numpy())))\n",
-    "yerr = np.abs(df[[\"O/Fe_Perc16\", \"O/Fe_Perc84\"]].to_numpy() \\\n",
-    "    - np.column_stack((df[\"O/Fe_Median\"].to_numpy(),\n",
-    "                    df[\"O/Fe_Median\"].to_numpy())))"
+    "## median([O/Fe]) vs median([Fe/H]) Scatter + Err Bar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "fig = plt.figure(figsize=(2.0, 5.0))\n",
-    "gs = fig.add_gridspec(nrows=5, ncols=1, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "fig, axs = plt.subplots(\n",
+    "    figsize=(7.4, 2.0), nrows=1, ncols=4, sharey=True, sharex=True,\n",
+    "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
     "\n",
     "for ax in axs.flat:\n",
     "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
@@ -317,45 +322,37 @@
     "    ax.set_ylim(0.2, 0.3)\n",
     "    ax.set_xticks([-0.8, -0.4, 0, 0.4])\n",
     "    ax.set_yticks([0.22, 0.24, 0.26, 0.28])\n",
-    "    if ax == axs.flat[2]:\n",
+    "    if ax == axs.flat[0]:\n",
     "        ax.set_ylabel('median([O/Fe])')\n",
     "    ax.set_xlabel('median([Fe/H])')\n",
     "    ax.set_axisbelow(True)\n",
     "\n",
-    "markers = [\"s\", \"o\", \"v\", \"^\", \"d\"]\n",
-    "colors = [\"k\"] + list(settings.component_colors.values())\n",
-    "labels = [\"All\"] + list(settings.component_labels.values())\n",
+    "markers = [\"o\", \"v\", \"^\", \"d\"]\n",
+    "colors = list(settings.component_colors.values())\n",
+    "labels = list(settings.component_labels.values())\n",
     "for i, ax in enumerate(axs.flat):\n",
-    "    for j in range(-1, 4):\n",
-    "        label = labels[j + 1] if j + 1 == i else None\n",
-    "        color = colors[j + 1] if j + 1 == i else \"silver\"\n",
-    "        zorder = 10 if j + 1 == i else 5\n",
-    "        plot_xerr = xerr[df[\"Component\"] == j].T if j + 1 == i else None\n",
-    "        plot_yerr = yerr[df[\"Component\"] == j].T if j + 1 == i else None\n",
+    "    for j in range(4):\n",
+    "        label = labels[j] if j == i else None\n",
+    "        color = colors[j] if j == i else \"silver\"\n",
+    "        zorder = 10 if j == i else 5\n",
+    "        plot_xerr = xerr[df[\"Component\"] == j].T if j == i else None\n",
+    "        plot_yerr = yerr[df[\"Component\"] == j].T if j == i else None\n",
     "        ax.errorbar(\n",
     "            x=df[\"Fe/H_Median\"][df[\"Component\"] == j],\n",
     "            y=df[\"O/Fe_Median\"][df[\"Component\"] == j],\n",
-    "            xerr=plot_xerr,\n",
-    "            yerr=plot_yerr,\n",
+    "            xerr=plot_xerr, yerr=plot_yerr,\n",
     "            c=color, zorder=zorder, linestyle=\"none\",\n",
     "            ms=3, elinewidth=0.25, marker=None, capsize=0)\n",
     "        ax.scatter(\n",
     "            df[\"Fe/H_Median\"][df[\"Component\"] == j],\n",
     "            df[\"O/Fe_Median\"][df[\"Component\"] == j],\n",
     "            c=color, label=label, zorder=zorder,\n",
-    "            s=10, linewidths=0.4, edgecolors=\"white\", marker=markers[j + 1])\n",
+    "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
     "    ax.legend(loc=\"lower left\", framealpha=0, fontsize=5.0)\n",
     "\n",
     "fig.savefig(\"../images/metallicity/OFe_vs_FeH_originals_s127_err.pdf\")\n",
     "plt.close(fig)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
