Update and add new plots.

--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -10,13 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
-    "import numpy as np\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
     "from auriga.settings import Settings"
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings = Settings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,18 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create plots for all galaxies in two figures\n",
-    "settings = Settings()\n",
-    "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
-    "reruns = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
-    "plot_age_metal_rel_for_sample(simulations=originals,\n",
-    "                              filename=\"originals_s127\")\n",
-    "plot_age_metal_rel_for_sample(simulations=reruns,\n",
-    "                              filename=\"reruns_s251\")"
+    "# # Create plots for all galaxies in two figures\n",
+    "# settings = Settings()\n",
+    "# originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
+    "# reruns = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
+    "# plot_age_metal_rel_for_sample(simulations=originals,\n",
+    "#                               filename=\"originals_s127\")\n",
+    "# plot_age_metal_rel_for_sample(simulations=reruns,\n",
+    "#                               filename=\"reruns_s251\")"
    ]
   },
   {
@@ -216,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,19 +306,20 @@
     "                ha='left', va='bottom',\n",
     "                )\n",
     "\n",
-    "    for ext in [\"pdf\", \"png\"]:\n",
-    "        fig.savefig(f\"../images/age_metallicity_by_region/{simulation}.{ext}\")\n",
+    "    fig.savefig(f\"../images/age_metallicity_by_region/{simulation}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_age_metal_rel_by_region_for_galaxy(simulation=\"au6_or_l4_s127\")\n",
-    "plot_age_metal_rel_by_region_for_galaxy(simulation=\"au6_re_l4_s251\")"
+    "for galaxy in range(1, 31):\n",
+    "    plot_age_metal_rel_by_region_for_galaxy(f\"au{galaxy}_or_l4_s127\")\n",
+    "    if galaxy in settings.reruns:\n",
+    "        plot_age_metal_rel_by_region_for_galaxy(f\"au{galaxy}_re_l4_s251\")"
    ]
   }
  ],
