Add notebook and plots.

--- a/scripts/Stellar Positions.ipynb
+++ b/scripts/Stellar Positions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,15 @@
     "import matplotlib.cm as cm\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import warnings\n",
+    "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from auriga.images import figure_setup, set_axs_configuration, add_redshift\n",
     "from auriga.snapshot import Snapshot\n",
     "from auriga.settings import Settings\n",
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_stellar_ids_by_region(simulation: str) -> dict:\n",
+    "def get_insitu_stellar_ids_by_region(simulation: str) -> dict:\n",
     "    \"\"\"\n",
     "    Return a dictionary with all the IDs of the stars in each region in the\n",
     "    current snapshot.\n",
@@ -68,29 +76,35 @@
     "        A dictionary with all the IDs of the stars in each region.\n",
     "    \"\"\"\n",
     "\n",
+    "    galaxy, rerun, resolution, snapshot = parse(simulation)\n",
+    "\n",
     "    settings = Settings()\n",
     "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_circularity()\n",
-    "    s.tag_particles_by_region(disc_std_circ=1.0,\n",
-    "                              disc_min_circ=0.4,\n",
-    "                              cold_disc_delta_circ=0.25,\n",
-    "                              bulge_max_specific_energy=-0.75)\n",
+    "    s.tag_particles_by_region(\n",
+    "        disc_std_circ=settings.disc_std_circ,\n",
+    "        disc_min_circ=settings.disc_min_circ,\n",
+    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
+    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
+    "    s.add_stellar_origin()\n",
+    "    s.tag_in_situ_stars()\n",
     "\n",
     "    is_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
+    "    is_in_situ = s.is_in_situ == 1\n",
     "\n",
     "    ids_by_region = {}\n",
     "\n",
     "    for region_tag in settings.component_tags.values():\n",
     "        is_region = s.region_tag == region_tag\n",
-    "        ids_by_region[region_tag] = s.ids[is_star & is_region]\n",
+    "        ids_by_region[region_tag] = s.ids[is_star & is_region & is_in_situ]\n",
     "    \n",
     "    return ids_by_region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +122,7 @@
     "    ids_by_region : dict\n",
     "        A dictionary with the star IDs of the particles in each region of the\n",
     "        galaxy.\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    tuple\n",
@@ -118,17 +132,20 @@
     "        component.\n",
     "    \"\"\"\n",
     "\n",
+    "    settings = Settings()\n",
+    "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[4])\n",
     "    s.add_extra_coordinates()\n",
     "\n",
     "    props_by_region = {}\n",
     "\n",
     "    for region_tag in ids_by_region:\n",
+    "        min_part_number = ids_by_region[region_tag].shape[0] * 0.01\n",
     "        idxs = s.get_idxs_of_ids(ids=ids_by_region[region_tag])\n",
     "        # Remove idxs with values -1 (unmatched particles).\n",
     "        idxs = idxs[idxs >= 0]\n",
     "\n",
-    "        if idxs.shape[0] == 0:\n",
+    "        if idxs.shape[0] < min_part_number:\n",
     "            props_by_region[region_tag] = [np.nan] * 15\n",
     "        else:\n",
     "            props_by_region[region_tag] = [\n",
@@ -149,12 +166,12 @@
     "                np.percentile(np.abs(s.pos[idxs, 2]), 84),\n",
     "                ]\n",
     "\n",
-    "    return s.time, s.redshift, props_by_region"
+    "    return s.time, s.expansion_factor, props_by_region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +194,7 @@
     "    settings = Settings()\n",
     "\n",
     "    times = []\n",
-    "    redshifts = []\n",
+    "    exp_facts = []\n",
     "\n",
     "    halo_r_mean = []\n",
     "    halo_r_median = []\n",
@@ -249,18 +266,18 @@
     "        # Get IDs by region of the last snapshot.\n",
     "        _, rerun, resolution = parse(simulation)\n",
     "        n_snapshots = make_snapshot_number(rerun, resolution)\n",
-    "        ids_by_region = get_stellar_ids_by_region(\n",
+    "        ids_by_region = get_insitu_stellar_ids_by_region(\n",
     "            f\"{simulation}_s{n_snapshots - 1}\")\n",
     "\n",
     "        for i in range(n_snapshots):\n",
     "            if i >= settings.first_snap:\n",
-    "                time, redshift, props_by_region = \\\n",
+    "                time, exp_fact, props_by_region = \\\n",
     "                    get_avg_props_of_ids_in_snapshot(\n",
     "                        simulation=f\"{simulation}_s{i}\",\n",
     "                        ids_by_region=ids_by_region)\n",
     "                \n",
     "                times.append(time)\n",
-    "                redshifts.append(redshift)\n",
+    "                exp_facts.append(exp_fact)\n",
     "\n",
     "                halo_r_mean.append(props_by_region[0][0])\n",
     "                halo_r_median.append(props_by_region[0][1])\n",
@@ -329,7 +346,7 @@
     "    # Create data frame.\n",
     "    df = pd.DataFrame()\n",
     "    df[\"Time\"] = times\n",
-    "    df[\"Redshift\"] = redshift\n",
+    "    df[\"ExpansionFactor\"] = exp_facts\n",
     "\n",
     "    df[\"HaloMeanSphericalRadius\"] = halo_r_mean\n",
     "    df[\"HaloMedianSphericalRadius\"] = halo_r_median\n",
@@ -400,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,41 +438,51 @@
     "    axs[0].set_yticks([1E0, 1E1, 1E2])\n",
     "    axs[0].set_yticklabels([\"1\", \"10\", \"100\"])\n",
     "\n",
-    "    axs[0].set_ylabel(r\"$\\mathrm{median} \\left( r_{xy} \\right)$ [ckpc]\")\n",
-    "    axs[1].set_ylabel(r\"$\\mathrm{median} \\left( r \\right)$ [ckpc]\")\n",
+    "    axs[0].set_ylabel(r\"$\\mathrm{median} \\left( r_{xy} \\right)$ [kpc]\")\n",
+    "    axs[1].set_ylabel(r\"$\\mathrm{median} \\left( r \\right)$ [kpc]\")\n",
     "    axs[2].set_ylabel(\n",
-    "        r\"$\\mathrm{median} \\left( \\left| z \\right| \\right)$ [ckpc]\")\n",
+    "        r\"$\\mathrm{median} \\left( \\left| z \\right| \\right)$ [kpc]\")\n",
     "\n",
     "    for i, label in enumerate(settings.components):\n",
     "        reduced_label = settings.component_labels[label].replace(\" \", \"\")\n",
     "\n",
-    "        axs[0].plot(df[\"Time\"], df[f\"{reduced_label}MedianCylindricalRadius\"],\n",
+    "        axs[0].plot(df[\"Time\"],\n",
+    "                    df[\"ExpansionFactor\"] \\\n",
+    "                        * df[f\"{reduced_label}MedianCylindricalRadius\"],\n",
     "                    lw=1.5,\n",
     "                    color=settings.component_colors[label],\n",
     "                    label=settings.component_labels[label])\n",
     "        axs[0].fill_between(\n",
     "            df[\"Time\"],\n",
-    "            df[f\"{reduced_label}Perc16CylindricalRadius\"],\n",
-    "            df[f\"{reduced_label}Perc84CylindricalRadius\"],\n",
+    "            df[\"ExpansionFactor\"] \\\n",
+    "                * df[f\"{reduced_label}Perc16CylindricalRadius\"],\n",
+    "            df[\"ExpansionFactor\"] \\\n",
+    "                * df[f\"{reduced_label}Perc84CylindricalRadius\"],\n",
     "            lw=0, color=settings.component_colors[label], alpha=0.2)\n",
     "\n",
-    "        axs[1].plot(df[\"Time\"], df[f\"{reduced_label}MedianSphericalRadius\"],\n",
+    "        axs[1].plot(df[\"Time\"],\n",
+    "                    df[\"ExpansionFactor\"] \\\n",
+    "                        * df[f\"{reduced_label}MedianSphericalRadius\"],\n",
     "                    lw=1.5,\n",
     "                    color=settings.component_colors[label],\n",
     "                    label=settings.component_labels[label])\n",
     "        axs[1].fill_between(\n",
     "            df[\"Time\"],\n",
-    "            df[f\"{reduced_label}Perc16SphericalRadius\"],\n",
-    "            df[f\"{reduced_label}Perc84SphericalRadius\"],\n",
+    "            df[\"ExpansionFactor\"] \\\n",
+    "                * df[f\"{reduced_label}Perc16SphericalRadius\"],\n",
+    "            df[\"ExpansionFactor\"] \\\n",
+    "                * df[f\"{reduced_label}Perc84SphericalRadius\"],\n",
     "            lw=0, color=settings.component_colors[label], alpha=0.2)\n",
     "        \n",
-    "        axs[2].plot(df[\"Time\"], df[f\"{reduced_label}MedianHeight\"], lw=1.5,\n",
+    "        axs[2].plot(df[\"Time\"],\n",
+    "                    df[\"ExpansionFactor\"] \\\n",
+    "                        * df[f\"{reduced_label}MedianHeight\"], lw=1.5,\n",
     "                    color=settings.component_colors[label],\n",
     "                    label=settings.component_labels[label])\n",
     "        axs[2].fill_between(\n",
     "            df[\"Time\"],\n",
-    "            df[f\"{reduced_label}Perc16Height\"],\n",
-    "            df[f\"{reduced_label}Perc84Height\"],\n",
+    "            df[\"ExpansionFactor\"] * df[f\"{reduced_label}Perc16Height\"],\n",
+    "            df[\"ExpansionFactor\"] * df[f\"{reduced_label}Perc84Height\"],\n",
     "            lw=0, color=settings.component_colors[label], alpha=0.2)\n",
     "\n",
     "    for ax in axs:\n",
@@ -492,12 +519,13 @@
     "\n",
     "    for i, label in enumerate(settings.component_labels):\n",
     "        reduced_lbl = settings.component_labels[label].replace(\" \", \"\")\n",
+    "        mask = df[\"Time\"].to_numpy() >= 4.0\n",
     "\n",
     "        mcl, norm, cmap = multi_color_line(\n",
-    "                x=df[f\"{reduced_lbl}MeanCylindricalRadius\"].to_numpy(),\n",
-    "                y=df[f\"{reduced_lbl}MeanHeight\"].to_numpy(),\n",
-    "                c=df[\"Time\"].to_numpy(),\n",
-    "                cmap=\"winter_r\", vmin=0.0, vmax=14.0, lw=3.0,\n",
+    "                x=df[f\"{reduced_lbl}MeanCylindricalRadius\"].to_numpy()[mask],\n",
+    "                y=df[f\"{reduced_lbl}MeanHeight\"].to_numpy()[mask],\n",
+    "                c=df[\"Time\"].to_numpy()[mask],\n",
+    "                cmap=\"winter_r\", vmin=4.0, vmax=14.0, lw=3.0,\n",
     "                return_params=True)\n",
     "        axs[i].add_collection(mcl)\n",
     "        cbax = axs[i].inset_axes([0.1, 0.89, 0.6, 0.025],\n",
@@ -513,18 +541,18 @@
     "\n",
     "        # Median    \n",
     "        mcl, norm, cmap = multi_color_line(\n",
-    "            x=df[f\"{reduced_lbl}MedianCylindricalRadius\"].to_numpy(),\n",
-    "            y=df[f\"{reduced_lbl}MedianHeight\"].to_numpy(),\n",
-    "            c=df[\"Time\"].to_numpy(),\n",
-    "            cmap=\"spring_r\", vmin=0.0, vmax=14.0, lw=3.0, return_params=True)\n",
+    "            x=df[f\"{reduced_lbl}MedianCylindricalRadius\"].to_numpy()[mask],\n",
+    "            y=df[f\"{reduced_lbl}MedianHeight\"].to_numpy()[mask],\n",
+    "            c=df[\"Time\"].to_numpy()[mask],\n",
+    "            cmap=\"spring_r\", vmin=4.0, vmax=14.0, lw=3.0, return_params=True)\n",
     "        axs[i].add_collection(mcl)\n",
     "        cbax = axs[i].inset_axes([0.1, 0.85, 0.6, 0.025],\n",
     "                                transform=axs[i].transAxes)\n",
     "        cb = plt.colorbar(cm.ScalarMappable(norm=norm, cmap=cmap), cax=cbax,\n",
     "                        orientation=\"horizontal\")\n",
     "        cb.outline.set_visible(False)\n",
-    "        cb.set_ticks([0, 2, 4, 6, 8, 10, 12, 14])\n",
-    "        cb.set_ticklabels([0, 2, 4, 6, 8, 10, 12, 14], fontsize=5.0)\n",
+    "        cb.set_ticks([4, 6, 8, 10, 12, 14])\n",
+    "        cb.set_ticklabels([4, 6, 8, 10, 12, 14], fontsize=5.0)\n",
     "        cb.ax.tick_params(length=0.0)\n",
     "        axs[i].text(s=r\"\\textbf{MEDIAN}\", x=0.72, y=0.8625, ha=\"left\",\n",
     "                    va=\"center\", color=cmap(norm(14.0)), fontsize=4.0,\n",
@@ -553,11 +581,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for galaxy in range(16, 31):\n",
+    "for galaxy in range(18, 31):\n",
     "    create_figure(simulation=f\"au{galaxy}_or_l4\")\n",
     "    if galaxy in settings.reruns:\n",
     "        create_figure(simulation=f\"au{galaxy}_re_l4\")"
