--- a/scripts/Metallicity Profiles.ipynb
+++ b/scripts/Metallicity Profiles.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
     "            range=ax.get_xlim())\n",
     "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "        ax.plot(bin_centers[np.isfinite(data)],\n",
-    "                data[np.isfinite(data)], lw=.75, zorder=10,\n",
+    "                data[np.isfinite(data)], lw=1.0, zorder=10,\n",
     "                c=settings.component_colors[settings.components[tag]],\n",
     "                label=settings.component_labels[settings.components[tag]])\n",
     "    ax.text(x=0.95, y=0.95, size=6.0,\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,8 +149,8 @@
     "    axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
     "    set_axs_configuration(\n",
-    "        xlim=(1, 200), ylim=(-4, 3),\n",
-    "        xticks=[1, 10, 100], yticks=[-3, -2, -1, 0, 1, 2],\n",
+    "        xlim=(1, 200), ylim=(-1.5, 1.5),\n",
+    "        xticks=[1, 10, 100], yticks=[-1, -0.5, 0, 0.5, 1],\n",
     "        xlabel=r\"$r_{xy}$ [ckpc]\",\n",
     "        ylabel=r\"$\\mathrm{median} \\left( \\mathrm{[Fe/H]} \\right)$\",\n",
     "        axs=axs, n_used=n_simulations,\n",
@@ -163,7 +163,7 @@
     "        else:\n",
     "            ax.axis(\"off\")\n",
     "\n",
-    "    axs[0, 0].legend(loc=\"lower left\", framealpha=0.0, fontsize=4.0)\n",
+    "    axs[0, 0].legend(loc=\"upper left\", framealpha=0.0, fontsize=4.0)\n",
     "\n",
     "    for ax in axs.flatten():\n",
     "        ax.xaxis.label.set_size(8.0)\n",
@@ -175,15 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/freya/u/fiza/repos/auriga-metals/auriga/images.py:97: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  if xticklabels is not None: ax.set_xticklabels(xticklabels)\n",
       "/freya/u/fiza/repos/auriga-metals/auriga/images.py:97: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  if xticklabels is not None: ax.set_xticklabels(xticklabels)\n"
      ]
@@ -193,8 +191,8 @@
     "# Create plots for all galaxies in two figures\n",
     "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
     "reruns = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
-    "plot_metall_prof_for_sample(simulations=originals, filename=\"originals\")\n",
-    "plot_metall_prof_for_sample(simulations=reruns, filename=\"reruns\")"
+    "plot_metall_prof_for_sample(simulations=reruns, filename=\"reruns\")\n",
+    "plot_metall_prof_for_sample(simulations=originals, filename=\"originals\")"
    ]
   }
  ],
